<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
   >
    <LinearLayout
        android:id="@+id/layout_actionbar"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/flow_monitor_bg_color">
        <ImageButton
            android:id="@+id/actionbar_icon"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/sec_actionbar_back"
            android:background="@color/transparent"
            android:onClick="true"/>
        <TextView
            android:id="@+id/actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/operator_title"
            android:textSize="17sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/province_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/layout_actionbar"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:text="@string/province"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:gravity="center"
            >
        </TextView>
        <TextView
            android:id="@+id/province_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toLeftOf="@+id/icon1"
            android:layout_marginRight="10dp"
            android:textSize="17sp"
            android:textColor="@color/list_right_word_color"
            android:layout_centerVertical="true"
            android:gravity="center">
        </TextView>
        <ImageView
            android:id="@+id/icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/forward_icon"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/province_layout"
        android:background="@color/list_line_color"
        />

    <RelativeLayout
        android:id="@+id/city_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/line1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/city"
            android:layout_centerVertical="true"
            android:gravity="center"
            >
        </TextView>
        <TextView
            android:id="@+id/city_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toLeftOf="@+id/icon2"
            android:layout_marginRight="10dp"
            android:textSize="17sp"
            android:textColor="@color/list_right_word_color"
            android:layout_centerVertical="true"
            android:gravity="center">
        </TextView>
        <ImageView
            android:id="@+id/icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/forward_icon"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/city_layout"
        android:background="@color/list_line_color"
        />

    <RelativeLayout
        android:id="@+id/operator_info_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/line2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/operator"
            android:layout_centerVertical="true"
            android:gravity="center"
            >
        </TextView>
        <TextView
            android:id="@+id/operator_info_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toLeftOf="@+id/icon3"
            android:layout_marginRight="10dp"
            android:textSize="17sp"
            android:textColor="@color/list_right_word_color"
            android:layout_centerVertical="true"
            android:gravity="center">
        </TextView>
        <ImageView
            android:id="@+id/icon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/forward_icon"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/operator_info_layout"
        android:background="@color/list_line_color"
        />

    <RelativeLayout
        android:id="@+id/brand_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/line3"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:text="@string/brand"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:gravity="center"
            >
        </TextView>
        <TextView
            android:id="@+id/brand_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toLeftOf="@+id/icon4"
            android:layout_marginRight="10dp"
            android:textSize="17sp"
            android:textColor="@color/list_right_word_color"
            android:layout_centerVertical="true"
            android:gravity="center">
        </TextView>
        <ImageView
            android:id="@+id/icon4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/forward_icon"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/brand_layout"
        android:background="@color/list_line_color"
        />

    <RelativeLayout
        android:id="@+id/account_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/line4"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="17sp"
            android:text="@string/mounth_account"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:gravity="center"
            >
        </TextView>
        <EditText
            android:id="@+id/account_date"
            android:layout_height="25dp"
            android:layout_width="60dp"
            android:layout_toLeftOf="@+id/date"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="@color/list_right_word_color"
            android:numeric="integer"
            android:gravity="center"
            android:singleLine="true"
            android:maxLength="2"
            android:background="@drawable/input"
            android:selectAllOnFocus="true"
            >
        </EditText>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/list_right_word_color"
            android:text="@string/accounting_date"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center">

        </TextView>
       <!-- <TextView
            android:id="@+id/icon5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/forward_icon"
            android:visibility="invisible"
            /> -->
    </RelativeLayout>
    <ImageView
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/account_layout"
        android:background="@color/list_line_color"
        />
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:textSize="17sp"
        android:text="@string/save"
        android:gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d7d6d9"
        android:layout_above="@+id/save"/>

    <ImageButton
        android:id="@+id/shadow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/actionbar_shadow"
        android:layout_below="@+id/layout_actionbar"/>

</RelativeLayout>