<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:secmanager="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layout_actionbar"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">
        <ImageButton
            android:id="@+id/actionbar_icon"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/sec_actionbar_back"
            android:background="@color/transparent"/>
        <TextView
            android:id="@+id/actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/virus_scan_name"
            android:textSize="17sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <!-- virus scan layout-->
    <RelativeLayout
        android:id="@+id/scanning_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/layout_actionbar"
        android:visibility="visible"
        >
        <RelativeLayout
            android:id="@+id/round_progress_layout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            >

            <com.guli.secmanager.widget.RadarView
                android:id="@+id/radar"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/virus_scan_info"
            style="@style/MenuButtonDescribe"
            android:text="@string/virus_scanning"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:layout_centerInParent="true"
            android:paddingTop="160dp"
            />

        <TableLayout
            android:id="@+id/cleanup_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:columnCount="3"
            android:stretchColumns="*"
            android:orientation="horizontal">
            <TableRow>
                <RelativeLayout
                    android:id="@+id/virus_system_bug_layout"
                    android:layout_height="wrap_content"
                    android:layout_width="1dp"
                    android:background="@color/white"
                    android:layout_margin="@dimen/panel_margin">
                    <ImageButton
                        android:id="@+id/iv_virus_system_bug"
                        style="@style/MenuButton"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/virus_system_bug"
                        />
                    <TextView
                        android:id="@+id/virus_system_bug_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_virus_system_bug"
                        android:layout_marginTop="15dp"
                        android:textSize="20sp"
                        android:textColor="@color/green"
                        android:layout_centerHorizontal="true"
                        android:text="@string/zero_item"/>
                    <TextView
                        android:id="@+id/tv_virus_system_bug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="15sp"
                        android:textColor="@android:color/darker_gray"
                        android:layout_below="@id/virus_system_bug_count"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        android:text="@string/list_system_bug_title"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/virus_soft_installed_layout"
                    android:layout_height="wrap_content"
                    android:layout_width="1dp"
                    android:background="@color/white"
                    android:layout_marginTop="@dimen/panel_margin"
                    android:layout_marginBottom="@dimen/panel_margin">
                    <ImageButton
                        android:id="@+id/iv_virus_soft_installed"
                        style="@style/MenuButton"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/virus_soft_installed"
                        />
                    <TextView
                        android:id="@+id/virus_soft_installed_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_virus_soft_installed"
                        android:layout_marginTop="15dp"
                        android:textSize="20sp"
                        android:textColor="@color/green"
                        android:layout_centerHorizontal="true"
                        android:text="@string/zero_item"/>
                    <TextView
                        android:id="@+id/tv_virus_soft_installed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="15sp"
                        android:textColor="@android:color/darker_gray"
                        android:layout_below="@id/virus_soft_installed_count"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        android:text="@string/soft_installed_title"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/virus_soft_uninstalled_layout"
                    android:layout_height="wrap_content"
                    android:layout_width="1dp"
                    android:background="@color/white"
                    android:layout_margin="@dimen/panel_margin">
                    <ImageButton
                        android:id="@+id/iv_virus_soft_uninstalled"
                        style="@style/MenuButton"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/virus_soft_uninstalled"
                        />
                    <TextView
                        android:id="@+id/virus_soft_uninstalled_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_virus_soft_uninstalled"
                        android:layout_marginTop="15dp"
                        android:textSize="20sp"
                        android:textColor="@color/green"
                        android:layout_centerHorizontal="true"
                        android:text="@string/zero_item"/>
                    <TextView
                        android:id="@+id/tv_virus_soft_uninstalled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="15sp"
                        android:textColor="@android:color/darker_gray"
                        android:layout_below="@id/virus_soft_uninstalled_count"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        android:text="@string/sdcard_soft_title"/>
                </RelativeLayout>
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <!-- virus clean layout-->
    <RelativeLayout
        android:id="@+id/scan_finish_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/layout_actionbar"
        android:visibility="visible"
        >

        <LinearLayout
            android:id="@+id/layout_info"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/orange">
            <TextView
                android:id="@+id/scan_title_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textSize="48sp"
                android:textColor="@color/white"
                android:text="@string/result_big_danger_info"/>
            <TextView
                android:id="@+id/scan_result_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:text="@string/result_big_danger_info"
                android:textColor="@color/white"
                android:textSize="17sp"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/complete_button"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/all_repair"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:onClick="true">
            </Button>
        </RelativeLayout>

        <ExpandableListView
            android:id="@+id/virus_scan_recover_group_list_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_above="@id/layout_button"
            android:layout_below="@id/layout_info"
            android:longClickable="false"
            android:divider="@android:color/transparent"
            />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/actionbar_shadow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/actionbar_shadow"
        android:layout_below="@+id/layout_actionbar"/>

</RelativeLayout>
